objects/Prospect_Company__c.object
<CustomObject>
    <fields>
        <fullName>AOV_Band__c</fullName>
        <label>AOV Band</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>$25M+</fullName>
                </value>
                <value>
                    <fullName>$10M-25M</fullName>
                </value>
                <value>
                    <fullName>$5M-10M</fullName>
                </value>
                <value>
                    <fullName>$1M-5M</fullName>
                </value>
                <value>
                    <fullName>$600k-1M</fullName>
                </value>
                <value>
                    <fullName>$200k-600k</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AOV__c</fullName>
        <label>AOV</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Companies</relationshipLabel>
        <relationshipName>Prospect_Companies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Annual_Revenue__c</fullName>
        <label>Annual Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Assets__c</fullName>
        <label>Assets</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSG_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CSG Rep</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Prospect Companies</relationshipLabel>
        <relationshipName>Prospect_Companies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CSG_Status__c</fullName>
        <label>CSG Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                    <color>#78C953</color>
                    <label>Green</label>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                    <color>#F3D904</color>
                    <label>Yellow</label>
                </value>
                <value>
                    <fullName>Red</fullName>
                    <color>#FF0000</color>
                    <label>Red</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Core Rep</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Prospect Companies (Core Rep)</relationshipLabel>
        <relationshipName>Prospect_Companies_Core_Rep</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Employees__c</fullName>
        <label>Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FB_Company_City__c</fullName>
        <label>FB Company City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FB_Company_Country__c</fullName>
        <label>FB Company Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FB_Company_Description__c</fullName>
        <label>FB Company Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FB_Company_Employees__c</fullName>
        <label>FB Company Employees</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FB_Company_Industry__c</fullName>
        <label>FB Company Industry</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FB_Company_Linkedin__c</fullName>
        <description>FunnelBeam Company Linkedin Url</description>
        <inlineHelpText>FunnelBeam Company Linkedin Url</inlineHelpText>
        <label>FB Company Linkedin</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FB_Company_Name__c</fullName>
        <label>FB Company Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FB_Company_Phone__c</fullName>
        <label>FB Company Phone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FB_Company_Sales_Marketing_Tech_Stack__c</fullName>
        <description>Sales/mar-tech tools.  Salesforce, Marketo, Pardot, Eloqua, Hubspot, etc</description>
        <label>FB Company Sales/Marketing Tech Stack</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FB_Company_Salesforce_Jobs_Details__c</fullName>
        <label>FB Company Salesforce Jobs Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FB_Company_State__c</fullName>
        <label>FB Company State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FB_Company_Street_Address__c</fullName>
        <label>FB Company Street Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FB_Company_WebSite__c</fullName>
        <label>FB Company WebSite</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FB_Company_Zip__c</fullName>
        <label>FB Company Zip</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FB_Date_Added__c</fullName>
        <label>FB Date Added</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FB_Num_Of_SalesForce_Related_Jobs_Open__c</fullName>
        <label>FB Num Of SalesForce Related Jobs Open</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FB_SFDC_Jobs__c</fullName>
        <label>FB # of Salesforce Jobs Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FB_SFDC_Licences__c</fullName>
        <label>FB # of Salesforce Licences</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FB_SFDC_Locations__c</fullName>
        <label>FB Salesforce Job Open Locations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Global_Fortune_1000_Rank__c</fullName>
        <label>Global Fortune 1000 Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Banking and Finance</fullName>
                </value>
                <value>
                    <fullName>High Tech</fullName>
                </value>
                <value>
                    <fullName>Nonclassifiable Establishments</fullName>
                </value>
                <value>
                    <fullName>Entertainment, Travel and Leisure</fullName>
                </value>
                <value>
                    <fullName>Professional Services</fullName>
                </value>
                <value>
                    <fullName>Telecommunications and Publishing</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Agriculture, Forestry and Fishing</fullName>
                </value>
                <value>
                    <fullName>Hospitality, Travel, &amp; Transportation</fullName>
                </value>
                <value>
                    <fullName>Construction and Building Materials</fullName>
                </value>
                <value>
                    <fullName>Public Sector and Government</fullName>
                </value>
                <value>
                    <fullName>Not For Profit</fullName>
                </value>
                <value>
                    <fullName>Automotive and Transportation</fullName>
                </value>
                <value>
                    <fullName>Business and Management Services</fullName>
                </value>
                <value>
                    <fullName>Financial Services</fullName>
                </value>
                <value>
                    <fullName>Media &amp; Communications</fullName>
                </value>
                <value>
                    <fullName>Corporation</fullName>
                </value>
                <value>
                    <fullName>Computers</fullName>
                </value>
                <value>
                    <fullName>ICT Channel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initiation_Date_with_SFDC__c</fullName>
        <label>Initiation Date with SFDC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Customer?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Licenses__c</fullName>
        <label>Licenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Market_Value__c</fullName>
        <label>Market Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Company</label>
        <referenceTo>Prospect_Company__c</referenceTo>
        <relationshipLabel>Associated Companies</relationshipLabel>
        <relationshipName>Prospect_Companies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Platform_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Platform Rep</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Prospect Companies (Platform Rep)</relationshipLabel>
        <relationshipName>Prospect_Companies_Platform_Rep</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Profits__c</fullName>
        <label>Profits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tier 1</fullName>
                </value>
                <value>
                    <fullName>Tier 2</fullName>
                </value>
                <value>
                    <fullName>Tier 3</fullName>
                </value>
                <value>
                    <fullName>Tier 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFDC_Revenue__c</fullName>
        <label>SFDC Revenue</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Strat</fullName>
                </value>
                <value>
                    <fullName>Key</fullName>
                </value>
                <value>
                    <fullName>Select</fullName>
                </value>
                <value>
                    <fullName>MM</fullName>
                </value>
                <value>
                    <fullName>GB</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Working</fullName>
                </value>
                <value>
                    <fullName>Dead</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <inlineHelpText>T1 &gt; 10k
T2 &gt;= 1K
T3 &lt; 1k</inlineHelpText>
        <label>Tier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tier 1</fullName>
                </value>
                <value>
                    <fullName>Tier 2</fullName>
                </value>
                <value>
                    <fullName>Tier 3</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Tier 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Child_Company_Licenses__c</fullName>
        <label>Total Child Company Licenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Child_Companies__c</fullName>
        <label>Total Number of Child Companies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Employees__c</fullName>
        <label>Total Number of Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <label>Prospect Company</label>
    <listViews>
        <fullName>ANZ_Prospects</fullName>
        <columns>NAME</columns>
        <columns>Parent__c</columns>
        <columns>Address__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Country__c</columns>
        <columns>Is_Customer__c</columns>
        <columns>AOV_Band__c</columns>
        <columns>Employees__c</columns>
        <columns>Industry__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>contains</operation>
            <value>australia,Zealand,AU</value>
        </filters>
        <label>ANZ Prospects</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Licenses__c</columns>
        <columns>Parent__c</columns>
        <columns>Address__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Is_Customer__c</columns>
        <columns>Annual_Revenue__c</columns>
        <columns>Employees__c</columns>
        <columns>Industry__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Clients</fullName>
        <columns>NAME</columns>
        <columns>Licenses__c</columns>
        <columns>Country__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Customer__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Clients</label>
    </listViews>
    <listViews>
        <fullName>Global_Companies</fullName>
        <columns>NAME</columns>
        <columns>Company__c</columns>
        <columns>Industry__c</columns>
        <columns>Is_Customer__c</columns>
        <columns>Employees__c</columns>
        <columns>Licenses__c</columns>
        <columns>Country__c</columns>
        <columns>City__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Prospect_Company__c.Global_Company</value>
        </filters>
        <label>Global Companies</label>
    </listViews>
    <listViews>
        <fullName>HLS_Vertical</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>HLS Vertical</label>
    </listViews>
    <listViews>
        <fullName>Harrison_Prospect_List</fullName>
        <columns>AOV_Band__c</columns>
        <columns>NAME</columns>
        <columns>Parent__c</columns>
        <columns>Address__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Country__c</columns>
        <columns>Is_Customer__c</columns>
        <columns>Annual_Revenue__c</columns>
        <columns>Employees__c</columns>
        <columns>Industry__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>TX</value>
        </filters>
        <filters>
            <field>AOV_Band__c</field>
            <operation>equals</operation>
            <value>$5M-10M,$1M-5M,$600k-1M,$200k-600k</value>
        </filters>
        <label>Harrison - Prospect List</label>
    </listViews>
    <nameField>
        <label>Prospect Company Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prospect Companies</pluralLabel>
    <recordTypes>
        <fullName>Company</fullName>
        <active>true</active>
        <label>Company</label>
    </recordTypes>
    <recordTypes>
        <fullName>Global_Company</fullName>
        <active>true</active>
        <label>Global Company</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>